--- a/utilities.css
+++ b/utilities.css
@@ -46,7 +46,7 @@
   /* box-shadow: 0px 2px 20px 1px var(--color-shadows); */
 }
 
-.header-holder .mini-menu .but3 {
+.header-holder .mini-menu #but3 {
   box-shadow: 0px 2px 20px 1px var(--color-shadows);
 }
 
