--- a/utilities.css
+++ b/utilities.css
@@ -5,11 +5,18 @@
 
 .icon-frame {
   background-color: var(--color-primary);
+  position: relative;
   width: 4rem;
   height: 4rem;
   border-radius: 50%;
+  cursor: pointer;
 }
 
+.icon-frame .logo {
+  width: 100%;
+  min-width: 60px;
+  min-height: 60px;
+}
 .header-holder {
   position: relative;
   display: flex;
