--- a/utilities.css
+++ b/utilities.css
@@ -235,11 +235,20 @@ main .tab-div div img {
   box-shadow: var(--all-shadows);
 }
 
+.portfolio-section{
+  
+}
 .resources-links{
   position: relative;
-  top: 15rem;
+  top: 20rem;
   display: grid;
   gap: 10rem;
+}
+
+.resources-links .portfolio-section h1{
+  text-align: center;
+  font-size: 4rem;
+  color: var(--color-dark-brown);
 }
 
 .resources-links .resources {
@@ -252,7 +261,7 @@ main .tab-div div img {
 
 .resources-links .resources:hover{
   transition: 500ms ease-in-out;
-  box-shadow: none;
+  background-color: transparent;
 }
 
 .resources-links .resources > div{
@@ -262,4 +271,39 @@ main .tab-div div img {
 .resources-links .resources .resource-image img{
   width: 90%;
   border-radius: 10px;
+}
+
+.resources-links .resources .resource-copy h1,
+.resources-links .resources .resource-copy h2{
+ color: var(--color-dark-brown);
+}
+
+.resources-links .resources .resource-copy p{
+  font-size: 1.1rem;
+  margin: 1rem 0;
+  line-height: 1.4;
+}
+
+.resources-links .resources .resource-copy ul li{
+  padding: 0.2rem 0;
+  display: flex;
+  align-content: center;
+  gap: 1.5rem;
+}
+
+.resources-links .resources .resource-copy button {
+  border: none;
+  outline: none;
+  margin-top: 2rem;
+  background-color: #8687f6;
+  padding: 1rem;
+  border-radius: 5px;
+  color: var(--color-primary);
+  box-shadow: var(--all-shadows);
+}
+
+.resources-links .resources .resource-copy button:hover{
+  background-color: transparent;
+  transition: 300ms ease-in-out;
+  color: var(--color-dark-brown);
 }
