--- a/docs/main.css
+++ b/docs/main.css
@@ -4,24 +4,126 @@
   font-family: "Lato", sans-serif;
   margin: 0;
   box-sizing: border;
-  font-size: 1.1rem;
+  font-size: 1.03rem;
+  --color-primary: #f6f6f6;
+  --color-buttons: #ffffff;
+  --color-bars: #130101f3;
+  --color-shadows: #33333357;
+  --all-shadows: 0px 2px 20px 1px var(--color-shadows);
+  --color-dark-brown: rgba(53, 1, 1, 0.658);
+  color: var(--color-bars);
 }
 
 body {
   margin: 0;
-  width: 100vw;
-  background-color: whitesmoke;
+  /* background-color: whitesmoke; */
   overflow-x: hidden;
 }
 
+.hero-section {
+  position: relative;
+  width: 100%;
+  height: 20rem;
+  border-radius: 0 0 5rem 5rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url(../resources/resource-images/3d-rendering-modern-dining-room-living-room-with-luxury-decor.jpg);
+}
+
+.hero-section .overlay {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.822);
+  width: 100%;
+  height: 100%;
+  display: grid;
+  align-content: center;
+}
+
+.hero-section .overlay div h1 {
+    font-size: 3rem;
+    color: rgba(119, 12, 44, 0.685);
+}
+
+.hero-section .overlay div p{
+    font-size: 1.3rem;
+    color: rgba(119, 12, 44, 0.685);
+}
+
+.hero-section .overlay div p span {
+    background: var(--color-buttons);
+    padding: 1rem;
+    margin: 2rem;
+    border-radius: 0.5rem;
+}
+
+.hero-section .overlay div h1,
+.hero-section .overlay div p{
+    text-align: center;
+}
+
 main {
-    max-width: 720px;
-    margin: 0 auto;
+  padding-top: 3rem;
+  max-width: 720px;
+  margin: 0 auto;
 }
 
 img {
-    position: relative;
-    margin: 1rem 0;
-    left: 0;
-    width: 100%;
+  position: relative;
+  margin: 1rem 0;
+  width: 100%;
+  padding: 1rem;
+}
+
+h1 {
+  font-size: 2rem;
+  margin: 2rem 0 1rem 0;
+}
+
+h2 {
+  font-size: 1.5rem;
+  margin: 2rem 0 0.8rem 0;
+}
+
+h3 {
+  font-size: 1.2rem;
+  margin: 2rem 0 0.5rem 0;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(180, 23, 70);
+  border-bottom: 1px rgb(180, 23, 70) dashed;
+}
+
+header {
+  position: fixed;
+  width: 100vw;
+  z-index: 3;
+}
+
+header .header-holder .menu ul li a {
+  color: var(--color-bars);
+}
+
+footer {
+  position: relative;
+  top: 5rem;
+  padding-bottom: 4rem;
+  margin-left: 0;
+}
+
+footer h1 {
+  color: var(--color-dark-brown);
+  text-align: center;
+  font-size: 2.5rem;
+  line-height: 3;
+}
+footer p {
+  line-height: 2;
+  text-align: center;
+  font-size: 1.4rem;
+}
+
+footer p > span {
+  color: rgb(180, 23, 70);
 }
