--- a/docs/main.css
+++ b/docs/main.css
@@ -36,11 +36,12 @@ body {
   width: 100%;
   height: 100%;
   display: grid;
-  gap: 3rem;
+  /* gap: 0.5rem; */
   align-content: center;
 }
 
 .hero-section .overlay div h1 {
+    padding-top: 8rem;
     font-size: 3rem;
     color: rgba(119, 12, 44, 0.685);
 }
@@ -53,6 +54,7 @@ body {
 .hero-section .overlay div p span {
     background: var(--color-buttons);
     padding: 1rem;
+    display: inline-block;
     margin: 2rem;
     border-radius: 0.5rem;
 }
