--- a/docs/main.css
+++ b/docs/main.css
@@ -13,6 +13,9 @@
   --color-dark-brown: rgba(53, 1, 1, 0.658);
   color: var(--color-bars);
 }
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   margin: 0;
@@ -41,27 +44,27 @@ body {
 }
 
 .hero-section .overlay div h1 {
-    padding-top: 8rem;
-    font-size: 3rem;
-    color: rgba(119, 12, 44, 0.685);
+  padding-top: 8rem;
+  font-size: 3rem;
+  color: rgba(119, 12, 44, 0.685);
 }
 
-.hero-section .overlay div p{
-    font-size: 1.3rem;
-    color: rgba(119, 12, 44, 0.685);
+.hero-section .overlay div p {
+  font-size: 1.3rem;
+  color: rgba(119, 12, 44, 0.685);
 }
 
 .hero-section .overlay div p span {
-    background: var(--color-buttons);
-    padding: 1rem;
-    display: inline-block;
-    margin: 2rem;
-    border-radius: 0.5rem;
+  background: var(--color-buttons);
+  padding: 1rem;
+  display: inline-block;
+  margin: 2rem;
+  border-radius: 0.5rem;
 }
 
 .hero-section .overlay div h1,
-.hero-section .overlay div p{
-    text-align: center;
+.hero-section .overlay div p {
+  text-align: center;
 }
 
 main {
@@ -69,12 +72,18 @@ main {
   max-width: 720px;
   margin: 0 auto;
 }
-
+p {
+  margin: 1.5rem 0;
+}
 img {
   position: relative;
   margin: 1rem 0;
   width: 100%;
   padding: 1rem;
+}
+
+strong {
+  color: rgb(214, 118, 40);
 }
 
 h1 {
@@ -94,7 +103,7 @@ h3 {
 
 a {
   text-decoration: none;
-  color: rgb(180, 23, 70);
+  color: rgb(207, 61, 151);
   border-bottom: 1px rgb(180, 23, 70) dashed;
 }
 
@@ -129,4 +138,30 @@ footer p {
 
 footer p > span {
   color: rgb(180, 23, 70);
+}
+
+.notice {
+  position: relative;
+  padding: 1.5rem;
+  border-radius: 8px;
+  background-color: var(--color-primary);
+}
+
+.notice .side-margin {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  width: 0.5rem;
+  border-radius: 8px 0 0 8px;
+  background: orangered;
+}
+
+pre {
+  padding: 1rem;
+  margin: 1rem 0;
+  line-height: 1.6;
+  background-color: var(--color-primary);
+  outline: 1px rgba(0, 0, 0, 0.164) solid;
+  border-radius: 4px;
 }
