--- a/manterminal-styling.css
+++ b/manterminal-styling.css
@@ -74,10 +74,10 @@
 }
 
 .code-area > div > button:active {
-  background-color: rgba(128, 128, 128, 0.247);
+  background-color: rgb(255, 255, 255);
 }
 
-#code-docs {
+.code-docs {
   padding: 5px;
   font-size: 12px;
   background: #233659;
@@ -85,35 +85,51 @@
   border-radius: 2px;
   padding: 2rem;
   border: solid 1px white;
+  overflow: scroll;
 }
-#code-docs > code {
+.code-docs > code {
   overflow-x: scroll;
 }
 
-#code-docs > code {
+.code-docs > code {
+  position: relative;
+  top: 4rem;
   font-size: 1rem;
   color: white;
 }
 
-#code-docs > code > .function {
+.code-docs > code > .function {
   color: #50d94b;
 }
 
-#code-docs > code > .declaratives {
+.code-docs > code > .declaratives {
   color: #ff79c6;
 }
 
-#code-docs > code > .comments {
+.code-docs > code > .comments {
   color: #58728b;
 }
-#code-docs > code > .string {
+.code-docs > code > .string {
   color: #f1fa76;
 }
 
-#code-docs > code > .const-vars {
+.code-docs > code > .const-vars {
   color: #aaa7f8bb;
 }
 
-#code-docs > code > .params {
+.code-docs > code > .params {
   color: #ffc88ad7;
+}
+
+.identifier {
+  background-color: #343746;
+  box-shadow: var(--all-shadows);
+  padding: 0.5rem;
+  color: yellow;
+  font-size: 1.2rem;
+  position: absolute;
+  border: 1px solid rgba(255, 255, 255, 0.247);
+  top: 1rem;
+  border-radius: 5px;
+  left: 1rem;
 }
