--- a/manterminal-styling.css
+++ b/manterminal-styling.css
@@ -63,7 +63,6 @@
 
 .code-area {
   background-color: #343746;
-  position: sticky;
 }
 
 .code-area > div {
@@ -169,8 +168,13 @@
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
   .main-content .div-sections {
     display: flex;
+    flex-direction: column;
+  }
+
+  .code-docs {
+    max-height: 50vh;
   }
 }
